<resources>
    <string name="app_name">Lab5_ics45J</string>
    <string name="title">QUIZ SURVIVAL</string>
    <string name="startButton">START</string>
    <string name="highestScore">HIGHEST SCORE:</string>
    <string name="defaultScore">0</string>
    <string name="question">Are whales are mamals?</string>
    <string name="question_choice_1">Q 1</string>
    <string name="question_choice_2">Q 2</string>
    <string name="current_score">0</string>
    <string name="score_text">Score</string>
    <string name="first_life">firstLife</string>
    <string name="second_life">secondLife</string>
    <string name="third_life">thirdLife</string>
    <string name="question_choice_3">Q 3</string>
    <string name="home">HOME</string>
    <string name="description">This is the temporary description. This is the temporary description This is the temporary description This is the temporary description This is the temporary description This is the temporary description</string>
    <string name="CurrentScore">Current Score</string>
    <string name="defaultName">Steve</string>
    <string name="nameHint">enter name</string>
</resources>
